Closed Bug 1869195 Opened 7 months ago Closed 7 months ago

Crash in [@ mozilla::PresShell::GetRootScrollFrame]

Categories

(Core :: Layout, defect)

Unspecified
Windows 11
defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox-esr115 --- fixed
firefox120 --- wontfix
firefox121 --- wontfix
firefox122 --- fixed

People

(Reporter: wsmwk, Assigned: mkmelin)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/f08e906a-3062-4b0c-b4e6-1f45f0231113 user reports "scrolling down a printing view for one of the e-mails with photos attached to them iwhen it suddenly completely crashed."

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  xul.dll  mozilla::UniquePtr<nsCSSFrameConstructor, mozilla::DefaultDelete<nsCSSFrameConstructor> >::get const  mfbt/UniquePtr.h:286
0  xul.dll  mozilla::UniquePtr<nsCSSFrameConstructor, mozilla::DefaultDelete<nsCSSFrameConstructor> >::operator-> const  mfbt/UniquePtr.h:281
0  xul.dll  mozilla::PresShell::GetRootScrollFrame const  layout/base/PresShell.cpp:2483
0  xul.dll  mozilla::PresShell::GetRootScrollFrameAsScrollable const  layout/base/PresShell.cpp:2492
1  xul.dll  nsDocumentViewer::GetCurrentSheetFrameAndNumber const  layout/base/nsDocumentViewer.cpp:3103
2  xul.dll  nsDocumentViewer::GetPrintPreviewCurrentPageNumber  layout/base/nsDocumentViewer.cpp:3165
3  xul.dll  XPTC__InvokebyIndex  
4  xul.dll  CallMethodHelper::Invoke  js/xpconnect/src/XPCWrappedNative.cpp:1627
4  xul.dll  CallMethodHelper::Call  js/xpconnect/src/XPCWrappedNative.cpp:1180
4  xul.dll  XPCWrappedNative::CallMethod  js/xpconnect/src/XPCWrappedNative.cpp:1126

bp-67c28aad-f6de-46b5-8816-859c60231009 "I had a print dialouge open but had not printed yet. I went into the vies settings and expermented with activating and deactivating menues and email options. The program suddenly closed"

bp-364011e9-4bf3-4672-a86a-44f260230917 "I hit Cancel on the Print dialog and Thuderbird crashed."

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Component: General → Layout
Product: Thunderbird → Core
Version: Thunderbird 115 → unspecified
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/integration/autoland/rev/f7b6b2768fa6
Fix crash in [@ mozilla::PresShell::GetRootScrollFrame]. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
Regressions: 1870281
No longer regressions: 1870281

Comment on attachment 9367888 [details]
Bug 1869195 - Fix crash in [@ mozilla::PresShell::GetRootScrollFrame]. r=emilio

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: crash fix
  • User impact if declined: may crash
  • Fix Landed on Version: 122
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): just added null checking
Attachment #9367888 - Flags: approval-mozilla-esr115?

Comment on attachment 9367888 [details]
Bug 1869195 - Fix crash in [@ mozilla::PresShell::GetRootScrollFrame]. r=emilio

Approved for 115.7esr.

Attachment #9367888 - Flags: approval-mozilla-esr115? → approval-mozilla-esr115+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: