Bug 1869195 - Fix crash in [@ mozilla::PresShell::GetRootScrollFrame]. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D196021